[gd_scene load_steps=3 format=3 uid="uid://c7eiev0yh1uc1"]

[ext_resource type="Script" path="res://assets/point/Point.gd" id="1_ymbvl"]
[ext_resource type="Texture2D" uid="uid://dmgddo6oke8le" path="res://assets/point/pictures/base.png" id="2_iax5q"]

[node name="Point" type="Control" groups=["Points"]]
layout_mode = 3
anchor_left = -0.042
anchor_top = -0.074
anchor_right = 0.042
anchor_bottom = 0.074
offset_left = 0.384003
offset_top = -0.0480003
offset_right = -0.384003
offset_bottom = 0.0480003
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ymbvl")

[node name="Sprite" type="Sprite2D" parent="."]
z_index = 2
position = Vector2(48, 48)
scale = Vector2(0.0929116, 0.0929116)
texture = ExtResource("2_iax5q")

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
